--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        As a Electronics Engineering student at Politeknik Elektronika Negeri Surabaya, I have acquired skills in instrumentation, automation, wiring, programming with C, C++, python, arduino, html language, IoT, microcontroller, sensor and research and development (RnD) Currently I hold a 3.28 GPA.                     </p>
+                        My name is AKhmad Fadhlan Abdullah. As a Electronics Engineering student at Politeknik Elektronika Negeri Surabaya, I have acquired skills in instrumentation, automation, wiring, programming with C, C++, python, arduino, html language, IoT, microcontroller, sensor and research and development (RnD) Currently I hold a 3.28 GPA.                     </p>
                 </div>
             </div>
         </div>
