--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="January 2019 – April 2019">
+                <h3>PT. Infoglobal</h3>
+                <h4>Research and Development</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                    Research LoRa range communication, power consumtion, and develop LoRa with IoT 
+		</p>
             </div>
 
             <div data-date="September 2015 – September 2016">
