--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        My name is AKhmad Fadhlan Abdullah. As a Electronics Engineering student at Politeknik Elektronika Negeri Surabaya, I have acquired skills in instrumentation, automation, wiring, programming with C, C++, python, arduino, html language, IoT, microcontroller, sensor and research and development (RnD) Currently I hold a 3.28 GPA.                     </p>
+                        My name is Akhmad Fadhlan Abdullah. As a Electronics Engineering student at Politeknik Elektronika Negeri Surabaya, I have acquired skills in instrumentation, automation, wiring, programming with C, C++, python, arduino, html language, IoT, microcontroller, sensor and research and development (RnD) Currently I hold a 3.28 GPA.                     </p>
                 </div>
             </div>
         </div>
@@ -113,9 +113,9 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Politeknik Elektronika Negeri SUrabaya</h3>
+            <span class="education-date">July 2016 - August 2020</span>
+            <h4>Bachelor of Science in Electrical Engineering</h4>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
