--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Politeknik Elektronika Negeri SUrabaya</h3>
-            <span class="education-date">July 2016 - August 2020</span>
-            <h4>Bachelor of Science in Electrical Engineering</h4>
+            <span class="education-date">2016 - 2020</span>
+            <h4>Bachelor of degree in Electrical Engineering</h4>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
@@ -123,8 +123,8 @@
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <h3>Man 2 Malang</h3>
+            <span class="education-date">2013 - Sept 2016</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
                 <li>
