--- a/index.html
+++ b/index.html
@@ -91,12 +91,9 @@
 		</p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="January 2019 – August 2019">
+                <h3>Private Teacher</h3>
+                <h4>Math</h4>
             </div>
 
             <div data-date="September 2015 – September 2016">
