--- a/index.html
+++ b/index.html
@@ -113,27 +113,16 @@
             <h3>Politeknik Elektronika Negeri SUrabaya</h3>
             <span class="education-date">2016 - 2020</span>
             <h4>Bachelor of degree in Electrical Engineering</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
             <h3>Man 2 Malang</h3>
-            <span class="education-date">2013 - Sept 2016</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+            <span class="education-date">2013 - 2016</span>
+        </div>
+	<div class="education-block">
+            <h3>SMP AL-HIKMAH SURABAYA</h3>
+            <span class="education-date">2010 - Sept 2013</span>
         </div>
         <!-- End .education-block -->
     </div>
