--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
         <div class="education-block">
             <h3>Man 2 Malang</h3>
             <span class="education-date">2013 - 2016</span>
+	    <h4></h4>
         </div>
 	<div class="education-block">
             <h3>SMP AL-HIKMAH SURABAYA</h3>
-            <span class="education-date">2010 - Sept 2013</span>
+            <span class="education-date">2010 - 2013</span>
         </div>
         <!-- End .education-block -->
     </div>
