--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
 	<div class="education-block">
             <h3>SMP AL-HIKMAH SURABAYA</h3>
             <span class="education-date">2010 - 2013</span>
+	    <h4></h4>
+        </div>
+	<div class="education-block">
+            <SD AL-HIKMAH SURABAYA</h3>
+            <span class="education-date">2004 - 2010</span>
+	    <h4></h4>
         </div>
         <!-- End .education-block -->
     </div>
