--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	    <h4></h4>
         </div>
 	<div class="education-block">
-            <SD AL-HIKMAH SURABAYA</h3>
+            <h3>SD AL-HIKMAH SURABAYA</h3>
             <span class="education-date">2004 - 2010</span>
 	    <h4></h4>
         </div>
