--- a/index.html
+++ b/index.html
@@ -222,13 +222,10 @@
                             <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
                             <a href="https://www.linkedin.com/in/akhmad-fadhlan-abdullah-2b5545113/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://web.facebook.com/akhmad.fadlan.5?_rdc=1&_rdr" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/akhmad_fl/?hl=id" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
