--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://akhmad-fadhlan.github.io/#" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/akhmad-fadhlan-abdullah-2b5545113/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
