--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 YOUR NAME
+                        Copyright &copy; 2020 Akhmad Fadhlan Abdullah
                     </p>
                 </div>
                 <div class="col-sm-2 top">
