--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
             <li>Hardware</li>
             <li>Sensor</li>
             <li>Arduino</li>
+	    <li>Eagle</li>
+            
          </ul>
     </div>
     <!-- End #skills -->
