--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Lap Counter</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                            On this project I made a tool to calculate the time on the tamiya car race track. the project is limited to only three tracks. so the tool that we made can calculate the time achievement of each car on the three tracks
+			</p>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
