--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Vending Machine Candy</h3>
                         <p>
-                            Lorem dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            In this project I made a vending machine, the vending machine contained candy with a price of 1500 rupiah, for the payment using 500 rupiah, 1000 rupiah, 2000 rupiah coins. If the money entered is more than 1500 rupiah, the machine will automatically give a change. And if there is an error in the engine, the machine will automatically give a warning
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -186,7 +186,7 @@
             <li>Sensor</li>
             <li>Arduino</li>
 	    <li>Eagle</li>
-            
+            <li>Microcontroller</li>
          </ul>
     </div>
     <!-- End #skills -->
