--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Akhmad Fadhlan Abdullah</h1>
-            <h2>Electrical, IoT and Beckend Engineer</h2>
+            <h2>Electrical and IoT Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
