--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>Politeknik Elektronika Negeri SUrabaya</h3>
+            <h3>Politeknik Elektronika Negeri Surabaya</h3>
             <span class="education-date">2016 - 2020</span>
             <h4>Bachelor of degree in Electrical Engineering</h4>
         </div>
