--- a/index.html
+++ b/index.html
@@ -139,10 +139,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Lap Counter</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                            On this project I made a tool to calculate the time on the tamiya car race track. the project is limited to only three tracks. so the tool that we made can calculate the time achievement of each car on the three tracks                        </p>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -155,15 +154,28 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Vending Machine Candy</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                           In this project I made a vending machine, the vending machine contained candy with a price of 1500 rupiah, for the payment using 500 rupiah, 1000 rupiah, 2000 rupiah coins. If the money entered is more than 1500 rupiah, the machine will automatically give a change. And if there is an error in the engine, the machine will automatically give a warning                        </p>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+		    
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Make Monitoring Server For Mushroom Cultivation</h3>
+                        <p>
+                           In this project I made a server for monitoring temperature and humidity measurements in mushroom cultivation
+			<a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
             </div>
         </div>
     </div>
