--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
 			<a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
+		 </div>
+                <!-- End .project -->
                 </div>
             </div>
         </div>
