--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        As a Electronics Engineering student at Politeknik Elektronika Negeri Surabaya, I have acquired skills in instrumentation, automation, wiring, programming with C, C++, python, arduino, html language, IoT, microcontroller, sensor and research and development (RnD) Currently I hold a 3.28 GPA.                     </p>
+                        My name is Akhmad Fadhlan Abdullah. I'm Fresh graduate in Politeknik Elektronika Negeri Surabaya. As a Electronics Engineering student at Politeknik Elektronika Negeri Surabaya, I have acquired skills in instrumentation, automation, wiring, programming with C, C++, python, arduino, html language, IoT, microcontroller, sensor and research and development (RnD) Currently I hold a 3.28 GPA.                     </p>
                 </div>
             </div>
         </div>
@@ -177,7 +177,20 @@
                     <!-- End .project-info -->
 		 </div>
                 <!-- End .project -->
+		  <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Make Monitoring Server For Water Quality In Shrimp Ponds With Artificial Intellegent</h3>
+                        <p>
+                          In this project I made a tool to read the flow of water in real time using the water level sensor and Arduino, then the data is displayed on the LCD and serial monitor                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
                 </div>
+                <!-- End .project -->  
+               
             </div>
         </div>
     </div>
