--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <h3>Lap Counter</h3>
                         <p>
                             On this project I made a tool to calculate the time on the tamiya car race track. the project is limited to only three tracks. so the tool that we made can calculate the time achievement of each car on the three tracks                        </p>
-                        <a href="#">View Project</a>
+                        
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -157,7 +157,7 @@
                         <h3>Vending Machine Candy</h3>
                         <p>
                            In this project I made a vending machine, the vending machine contained candy with a price of 1500 rupiah, for the payment using 500 rupiah, 1000 rupiah, 2000 rupiah coins. If the money entered is more than 1500 rupiah, the machine will automatically give a change. And if there is an error in the engine, the machine will automatically give a warning                        </p>
-                        <a href="#">View Project</a>
+                        
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -172,7 +172,7 @@
                         <h3>Make Monitoring Server For Mushroom Cultivation</h3>
                         <p>
                            In this project I made a server for monitoring temperature and humidity measurements in mushroom cultivation
-			<a href="#">View Project</a>
+			
                     </div>
                     <!-- End .project-info -->
 		 </div>
@@ -185,7 +185,7 @@
                     <div class="project-info">
                         <h3>Make Monitoring Server For Water Quality In Shrimp Ponds With Artificial Intellegent</h3>
                         <p>
-                          In this project I made a tool to read the flow of water in real time using the water level sensor and Arduino, then the data is displayed on the LCD and serial monitor                        <a href="#">View Project</a>
+                          In this project I made a tool to read the flow of water in real time using the water level sensor and Arduino, then the data is displayed on the LCD and serial monitor                        
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -199,7 +199,9 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>Instrumentation</li>
-            <li>Basic Electrical</li>
+            <li>Basic of Electrical</li>
+	    <li>Embedded System</li>
+	    <li>Digital Electrpnics</li>
             <li>Programming PLC</li>
             <li>Arduino</li>
             <li>Microcontroller</li>
