--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Akhmad Fadhlan Abdullah</h1>
             <h2>Electrical and IoT Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/u/2/uc?id=1KKoHeNv6B6pOCIzRwGbQX1-izo2BXlqf&export=download" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -201,7 +201,7 @@
             <li>Instrumentation</li>
             <li>Basic of Electrical</li>
 	    <li>Embedded System</li>
-	    <li>Digital Electrpnics</li>
+	    <li>Digital Electronics</li>
             <li>Programming PLC</li>
             <li>Arduino</li>
             <li>Microcontroller</li>
