--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="project-info">
                         <h3>Make Monitoring Server For Water Quality In Shrimp Ponds With Artificial Intellegent</h3>
                         <p>
-                          In this project I made a tool to read the flow of water in real time using the water level sensor and Arduino, then the data is displayed on the LCD and serial monitor                        
+                          In this project i made a tool to read the flow of water in real time using the water level sensor and Arduino, then the data is displayed on the LCD and serial monitor                        
                     </div>
                     <!-- End .project-info -->
                 </div>
