--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="education-block">
             <h3>Politeknik Elektronika Negeri Surabaya (PENS) </h3>
             <span class="education-date">2016 - 2020</span>
-            <h4>Bachelor of degree in Electrical Engineering</h4>
+            <h4>Bachelor of Engineering in Electrical Engineering</h4>
         </div>
         <!-- End .education-block -->
 
