--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
+<meta name="google-site-verification" content="BPWilwRdwNVDHP-kQE3GpSXEEhaojIrrVsBD7RrdO6I" />
 
 <head>
     <meta charset="utf-8">
