--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             <li>Basic of Electrical</li>
 	    <li>Embedded System</li>
 	    <li>Digital Electronics</li>
+	    <li>Analog Circuits</li>
             <li>Programming PLC</li>
             <li>Arduino</li>
             <li>Microcontroller</li>
