--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Akhmad Fadhlan Abdullah</h1>
-            <h2>Electrical and IoT Engineer</h2>
+            <h2>Electronics and IoT Engineer</h2>
             <a href="https://drive.google.com/u/2/uc?id=1pUcwVklwu59gV28o86CAF0Nf5Ms6cgjK&export=download" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
