--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        My name is Akhmad Fadhlan Abdullah. I'm Fresh graduate in Politeknik Elektronika Negeri Surabaya. As a Electronics Engineering student at Politeknik Elektronika Negeri Surabaya, I have acquired skills in instrumentation, automation, wiring, programming with C, C++, python, arduino, html language, IoT, microcontroller, sensor and research and development (RnD) Currently I hold a 3.28 GPA.                     </p>
+                        My name is Akhmad Fadhlan Abdullah. I'm Fresh graduate in Politeknik Elektronika Negeri Surabaya. As an Electronics Engineering student at the State Electronics Polytechnic of Surabaya, I have skills in instrumentation, automation, wiring, programming with C, C ++, python, arduino, html, IoT, microcontroller, sensors and PLC programming, analog circuits, digital electronics, php native and CSS. Currently I hold a 3.28 GPA. 
+		    </p>
                 </div>
             </div>
         </div>
@@ -184,9 +185,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Make Monitoring Server For Water Quality In Shrimp Ponds With Artificial Intellegent</h3>
+                        <h3>Estimation Of Missing Parameter In The Water Quality System (Study Case: Vannamei Shrimp Ponds , Probolinggo) </h3>
                         <p>
-                          In this project i made a tool to read the flow of water in real time using the water level sensor and Arduino, then the data is displayed on the LCD and serial monitor                        
+                          In this project i made a system that can store the measurement of daily parameters of pond water is proposed and an assessment of the quality of pond water using the fuzzy logic method which then outputs will be displayed on the LCD or mobile apps. To overcome the existence of input failure on this system, this system is equipped with the estimation of input values that are failing using the neural network method. The parameter data can be stored in a database, as well as water quality parameters displayed on mobile apps and LCD displays                        
                     </div>
                     <!-- End .project-info -->
                 </div>
