--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Akhmad Fadhlan Abdullah</h1>
-            <h2>Electronics and IoT Engineer</h2>
+            <h2>Electronics,IoT, Hardware and Embedded Engineer</h2>
             <a href="https://drive.google.com/u/2/uc?id=1pUcwVklwu59gV28o86CAF0Nf5Ms6cgjK&export=download" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -130,6 +130,47 @@
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
+	
+ <div id="experience" class="background-alt">
+        <h2 class="heading">Training, Organization and Achievement</h2>
+        <div id="experience-timeline">
+            <div data-date="2016">
+                <h3>LKMM Pra-TD</h3>
+            </div>
+
+            <div data-date="2017">
+                <h3>LKMM TD</h3>
+            </div>
+		
+	    <div data-date="2017">
+                <h3>Juara III Musabaqah Tilawatil Qur'an</h3>
+            </div>
+		
+	    <div data-date="2018">
+                <h3>Penyelenggara Kegiatan Java Robot Contest IX</h3>
+            </div>
+	
+	    <div data-date="2018">
+                <h3>Staff UKM Seni Islami</h3>
+            </div>
+		
+	    <div data-date="2019">
+                <h3>Seminar dan Workshop Jurnalistik</h3>
+            </div>
+		 
+	 <div data-date="2019">
+                <h3>Pelatihan Kelas Cara Membuat Situs untuk Bisnis Anda </h3>
+            </div>
+		
+		<div data-date="2019">
+                <h3>Pelatihan Kelas Google Bisnisku </h3>
+            </div>
+		
+	<div data-date="2020
+                <h3>Webinar Series #2 Magister Terapan PENS: DATA MINING </h3>
+            </div>
+        </div>
+    </div>
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
