--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <li>
                 <a href="#education">Education</a>
             </li>
+	    <li>
+                <a href="#experience1">Training, Organization and Achievement</a>
+            </li>
             <li>
                 <a href="#projects">Projects</a>
             </li>
@@ -131,46 +134,6 @@
     </div>
     <!-- End #education -->
 	
- <div id="experience" class="background-alt">
-        <h2 class="heading">Training, Organization and Achievement</h2>
-        <div id="experience-timeline">
-            <div data-date="2016">
-                <h3>LKMM Pra-TD</h3>
-            </div>
-
-            <div data-date="2017">
-                <h3>LKMM TD</h3>
-            </div>
-		
-	    <div data-date="2017">
-                <h3>Juara III Musabaqah Tilawatil Qur'an</h3>
-            </div>
-		
-	    <div data-date="2018">
-                <h3>Penyelenggara Kegiatan Java Robot Contest IX</h3>
-            </div>
-	
-	    <div data-date="2018">
-                <h3>Staff UKM Seni Islami</h3>
-            </div>
-		
-	    <div data-date="2019">
-                <h3>Seminar dan Workshop Jurnalistik</h3>
-            </div>
-		 
-	 <div data-date="2019">
-                <h3>Pelatihan Kelas Cara Membuat Situs untuk Bisnis Anda </h3>
-            </div>
-		
-		<div data-date="2019">
-                <h3>Pelatihan Kelas Google Bisnisku </h3>
-            </div>
-		
-	<div data-date="2020
-                <h3>Webinar Series #2 Magister Terapan PENS: DATA MINING </h3>
-            </div>
-        </div>
-    </div>
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
