--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
             <li>Arduino</li>
             <li>Microcontroller</li>
             <li>Automation</li>
+            <li>Wireless Sensor Network</li>
             <li>Artificial Intellegent</li>
             <li>HTML</li>
             <li>PHP Native</li>
@@ -222,6 +223,7 @@
             <li>Python</li>
             <li>Eagle</li>
             <li>SketchUp</li>
+            <li>Firebase</li>
         </ul>
     </div>
     <!-- End #skills -->
