--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		    
 		<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/progres.jpg" />
+                        <img src="images/progres.JPG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
