--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
                 <!-- End .project -->
 		  <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/10.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Estimation Of Missing Parameter In The Water Quality System (Study Case: Vannamei Shrimp Ponds , Probolinggo) </h3>
+                        <h3>Minimum System (Minsys) </h3>
                         <p>
-                          In this project i made a system that can store the measurement of daily parameters of pond water is proposed and an assessment of the quality of pond water using the fuzzy logic method which then outputs will be displayed on the LCD or mobile apps. To overcome the existence of input failure on this system, this system is equipped with the estimation of input values that are failing using the neural network method. The parameter data can be stored in a database, as well as water quality parameters displayed on mobile apps and LCD displays                        
+                          Layout Routing Minimum System                        
                     </div>
                     <!-- End .project-info -->
                 </div>
