--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <!-- End .project -->
 		  <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/10.jpg" />
+                        <img src="images/10.JPG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
