--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div id="experience-timeline">
             <div data-date="January 2019 – April 2019">
                 <h3>PT. Infoglobal</h3>
-                <h4>Research and Development</h4>
+                <h4>Hardware Engineer</h4>
                 <p>
                     Research LoRa range communication, power consumtion, and develop LoRa with IoT
                 </p>
