--- a/index.html
+++ b/index.html
@@ -167,6 +167,18 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <div id="contact">
+      <h2>Get in Touch</h2>
+      <div id="contact-form">
+          <form method="POST" action="https://formspree.io/fadlanakhmad5@gmail.com">
+              <input type="hidden" name="_subject" value="Contact request from personal website" />
+              <input type="email" name="_replyto" placeholder="Your email" required>
+              <textarea name="message" placeholder="Your message" required></textarea>
+              <button type="submit">Send</button>
+          </form>
+      </div>
+      <!-- End #contact-form -->
+  </div>
 
 <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
   <div id="preloader"></div>
