--- a/index.html
+++ b/index.html
@@ -129,44 +129,63 @@
         <div class="section-title">
           <h2>Portfolio</h2>
       </div>
+      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-        <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-          <li data-filter="*" class="filter-active">All</li>
-        </ul>
+        <div class="col-lg-4 portfolio-item filter-app">
+          <div class="portfolio-img"><img src="assets/img/portfolio/progres.jpg" class="img-fluid" alt=""></div>
+        </div>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/progres.JPG" class="img-fluid" alt=""></div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/2.JPG" class="img-fluid" alt=""></div>
-
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/8.jpg" class="img-fluid" alt=""></div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolio/6.JPG" class="img-fluid" alt=""></div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/10.JPG" class="img-fluid" alt=""></div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/9.jpg" class="img-fluid" alt=""></div>
-          </div>
-
+        <div class="col-lg-4 portfolio-item filter-web">
+          <div class="portfolio-img"><img src="assets/img/portfolio/2.jpg" class="img-fluid" alt=""></div>
 
         </div>
 
-      </div>
-    </section><!-- End Portfolio Section -->
+        <div class="col-lg-4 portfolio-item filter-app">
+          <div class="portfolio-img"><img src="assets/img/portfolio/8.jpg" class="img-fluid" alt=""></div>
+        </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-img"><img src="assets/img/portfolio/6.jpg" class="img-fluid" alt=""></div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-img"><img src="assets/img/portfolio/10.jpg" class="img-fluid" alt=""></div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-img"><img src="assets/img/portfolio/9.jpg" class="img-fluid" alt=""></div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-img">
+            <video width="400px" height="350px" controls>
+              <source src="assets/img/portfolio/1.mp4" type="video/mp4">
+              Browsermu tidak mendukung tag ini, upgrade donk!
+            </video>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-img">
+            <video width="400px" height="350px" controls>
+              <source src="assets/img/portfolio/3.mp4" type="video/mp4">
+              Browsermu tidak mendukung tag ini, upgrade donk!
+            </video>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-img">
+            <video width="400px" height="350px" controls>
+              <source src="assets/img/portfolio/4.mp4" type="video/mp4">
+              Browsermu tidak mendukung tag ini, upgrade donk!
+            </video>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End Portfolio Section -->
     <div id="contact">
       <h2>Get in Touch</h2>
       <div id="contact-form">
