--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
 
         <div class="col-lg-4 portfolio-item filter-web">
-          <div class="portfolio-img"><img src="assets/img/portfolio/2.jpg" class="img-fluid" alt=""></div>
+          <div class="portfolio-img"><img src="assets/img/portfolio/2.JPG" class="img-fluid" alt=""></div>
 
         </div>
 
@@ -145,11 +145,11 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-img"><img src="assets/img/portfolio/6.jpg" class="img-fluid" alt=""></div>
+          <div class="portfolio-img"><img src="assets/img/portfolio/6.JPG" class="img-fluid" alt=""></div>
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-img"><img src="assets/img/portfolio/10.jpg" class="img-fluid" alt=""></div>
+          <div class="portfolio-img"><img src="assets/img/portfolio/10.JPG" class="img-fluid" alt=""></div>
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
