--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
         <div class="col-lg-4 portfolio-item filter-app">
-          <div class="portfolio-img"><img src="assets/img/portfolio/progres.jpg" class="img-fluid" alt=""></div>
+          <div class="portfolio-img"><img src="assets/img/portfolio/progres.JPG" class="img-fluid" alt=""></div>
         </div>
 
         <div class="col-lg-4 portfolio-item filter-web">
