--- a/index.html
+++ b/index.html
@@ -153,7 +153,12 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-img"><img src="assets/img/portfolio/9.jpg" class="img-fluid" alt=""></div>
+          <div class="portfolio-img">
+            <video width="400px" height="350px" controls>
+              <source src="assets/img/portfolio/p1.mp4" type="video/mp4">
+              Browsermu tidak mendukung tag ini, upgrade donk!
+            </video>
+          </div>
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
