--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-img"><img src="assets/img/portfolio/9.JPG" class="img-fluid" alt=""></div>
         </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-img"><img src="assets/img/portfolio/10.JPG" class="img-fluid" alt=""></div>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-img">
