--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
         
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-img"><img src="assets/img/portfolio/9.JPG" class="img-fluid" alt=""></div>
+          <div class="portfolio-img"><img src="assets/img/portfolio/9.jpg" class="img-fluid" alt=""></div>
         </div>
         
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
